[Add] Plan Html Css Practice

--- a/index.html
+++ b/index.html
@@ -98,10 +98,42 @@
         </div>
       </section>
 
-      <section class="cd-section" id="plan">
+      <section class="cd-section visible" id="plan">
         <div>
           <div class="content">
-            <img src="images/temp-section-04.jpg" />
+            <!-- plan-inner -->
+            <!-- plan-feature -->
+            <!-- plan-info -->
+            <!-- plan-heading -->
+            <!-- bar -->
+            <!-- plan-photo -->
+            <!-- history-info -->
+            <!-- bar -->
+            <!-- history-slider -->
+            <div class="plan-inner">
+              <div class="plan-feature">
+                <div class="plan-info">
+                  <div class="plan-heading">
+                    <h1>Planning <br />For the Next Project</h1>
+                    <hr class="plan-bar" />
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Cupiditate, adipisci id? Nisi necessitatibus culpa,
+                      reiciendis facilis qui odit neque ipsam minima autem
+                      quidem aperiam, eligendi ipsum? Minima fugiat ab tenetur
+                      consequatur labore facilis nemo veritatis. Maiores dicta
+                      delectus sequi a?
+                    </p>
+                  </div>
+                  <div class="plan-photo">
+                    <img src="images/plan-main-01.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="history-info">
+                  <h1 class="history-heading">History</h1>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -213,7 +245,7 @@
         </div>
       </section>
 
-      <section class="cd-section visible" id="contact">
+      <section class="cd-section" id="contact">
         <div>
           <!-- contact-inner -->
           <!-- contact-feature -->
@@ -227,7 +259,19 @@
               <div class="contact-feature">
                 <div class="contact-form">
                   <span class="contact-title"><b>Contact</b> Us</span>
+                  <!-- with teacher -->
+                  <form class="send-box" action="">
+                    <label for="">Email <span>*</span></label>
+                    <input type="email" />
+                    <label for="">Subject<span>*</span></label>
+                    <input type="text" />
+                    <label for="">Message<span>*</span></label>
+                    <textarea cols="30" rows="10"></textarea>
+                    <button>send message</button>
+                  </form>
+                  <!--
                   <form class="contact-form" action="">
+                    <label for=""></label>
                     <div class="contact-input">
                       <label for="email">Email <span>*</span></label
                       ><br />
@@ -262,23 +306,35 @@
                     </div>
                     <button class="form-btn">SEND MESSAGE</button>
                   </form>
+                  -->
                 </div>
                 <div class="contact-info">
                   <div class="info">
                     <h1 class="info-title">Our <b>Office</b></h1>
-                    <p>Address : Address: 309, New Cavendish St, EC1Y 3WK</p>
-                    <p>Phone : 0800 214 5252</p>
-                    <p>Email : designworks@designworks.com></p>
+                    <ul>
+                      <li>
+                        Address : Address: 309, New Cavendish St, EC1Y 3WK
+                      </li>
+                      <li>Phone : 0800 214 5252</li>
+                      <li>Email : designworks@designworks.com></li>
+                    </ul>
                   </div>
                   <div class="info">
                     <h1 class="info-title">Business <b>Hours</b></h1>
-                    <p>Monday - Friday : 9am to 5pm</p>
-                    <p>Saturday : 9am to 2pm</p>
-                    <p>Sunday : Closed</p>
+                    <ul>
+                      <li>
+                        <i class="fa fa-clock-o"></i>Monday - Friday : 9am to
+                        5pm
+                      </li>
+                      <li>
+                        <i class="fa fa-clock-o"></i>Saturday : 9am to 2pm
+                      </li>
+                      <li><i class="fa fa-clock-o"></i>Sunday : Closed</li>
+                    </ul>
                   </div>
                   <div class="info">
                     <h1 class="info-title">Get in <b>Touch</b></h1>
-                    <span>
+                    <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Harum ipsam vel eaque repudiandae eius, id aliquam,
                       laborum error placeat at, odit temporibus architecto
@@ -288,7 +344,7 @@
                       fuga minima doloremque, optio, laborum illum rerum quia
                       quas voluptate voluptatem. Voluptate, rem incidunt!
                       Quisquam, deleniti?
-                    </span>
+                    </p>
                   </div>
                 </div>
               </div>
