[Add] Html Css Home 부분 애니메이션 적용 공부

--- a/index.html
+++ b/index.html
@@ -22,10 +22,31 @@
 
   <body data-hijacking="on" data-animation="rotate">
     <div class="container">
-      <section class="cd-section" id="home">
+      <section class="cd-section visible" id="home">
         <div>
           <div class="content">
-            <img src="images/temp-section-01.jpg" />
+            <!-- home-inner -->
+            <!-- welcome-text -->
+            <!-- opacity-image -->
+            <!-- home-heading -->
+            <div class="home-inner">
+              <div class="welcome-text">
+                <div>
+                  <span>YOU CAN DO IT</span>
+                  <br />
+
+                  <span>with happy job <i class="fa fa-heart"></i></span>
+                </div>
+              </div>
+              <div class="black-tab"></div>
+              <div class="opacity-image">
+                <div class="home-heading">
+                  Creative <br />Architecture <br />
+                  Specialists
+                </div>
+                <img src="" alt="" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -90,7 +111,7 @@
         </div>
       </section>
 
-      <section class="cd-section visible" id="project">
+      <section class="cd-section" id="project">
         <div>
           <div class="content">
             <div class="project-inner">
