--- a/index_teacher.html
+++ b/index_teacher.html
@@ -28,10 +28,27 @@
 
   <body data-hijacking="on" data-animation="rotate">
     <div class="container">
-      <section class="cd-section" id="home">
+      <section class="cd-section visible" id="home">
         <div>
           <div class="content">
-            <img src="images/temp-section-01.jpg" />
+            <!-- home-inner -->
+            <!-- welcome-text -->
+            <!-- opacity-image -->
+            <!-- home-heading -->
+            <div class="home-inner">
+              <h3 class="welcome-text">
+                You can do it<span>
+                  with happyJob <i class="fa fa-heart"></i
+                ></span>
+              </h3>
+              <div class="opacity-image">
+                <div class="home-heading">
+                  <span>creative</span>
+                  <span>Architecture</span>
+                  <span>Specialists</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -96,7 +113,7 @@
         </div>
       </section>
 
-      <section class="cd-section visible" id="project">
+      <section class="cd-section" id="project">
         <div>
           <div class="content">
             <div class="project-inner">
@@ -105,33 +122,100 @@
               <input type="radio" name="tabmenu" id="tab3" hidden />
               <div class="tabs">
                 <div class="tab">
-                  <div class="project-info">
-                    <h3></h3>
-                    <p></p>
+                  <div class="project-info" data-text="01">
+                    <!-- <span class="project-number">01</span> -->
+                    <h3>Project : Hallway of Architecture</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Suscipit dolor modi ut eveniet exercitationem,
+                      voluptatibus aspernatur fugit culpa quisquam. Fuga
+                      laboriosam temporibus sint debitis veniam omnis quam ipsam
+                      vel magnam. Culpa voluptate quo temporibus officiis
+                      assumenda magnam eos doloribus distinctio!
+                    </p>
                     <ul>
-                      <li><b></b></li>
-                      <li><b></b></li>
-                      <li><b></b></li>
+                      <li><b>Area</b> : 2345 m2</li>
+                      <li><b>Completed Date</b> : April 2019</li>
+                      <li><b>Architect</b> : Robert Matteus</li>
                     </ul>
                     <div class="detail">
-                      <div><span></span></div>
+                      <div><span>321</span>WORKING DAY</div>
+                      <div><span>420</span>MEMBERS</div>
+                      <div><span>8M</span>BUDGET</div>
                     </div>
-                    <a class="view-project">view-project</a>
+                    <a class="view-project"
+                      >view-project<i class="fa fa-long-arrow-right"></i
+                    ></a>
                   </div>
                   <div class="project-photo">
                     <img src="images/project-main-01-01.jpg" alt="" />
-                  </div>
-                </div>
-                <div class="tab">
-                  <div class="project-info">proejct-info2</div>
-                  <div class="project-photo">
+                    <img src="images/project-main-01-02.jpg" alt="" />
+                    <img src="images/project-main-01-03.jpg" alt="" />
                     <img src="images/project-main-01-04.jpg" alt="" />
                   </div>
                 </div>
                 <div class="tab">
-                  <div class="project-info">proejct-info3</div>
+                  <div class="project-info" data-text="02">
+                    <h3>Project : Glass Wall Architecture</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Suscipit dolor modi ut eveniet exercitationem,
+                      voluptatibus aspernatur fugit culpa quisquam. Fuga
+                      laboriosam temporibus sint debitis veniam omnis quam ipsam
+                      vel magnam. Culpa voluptate quo temporibus officiis
+                      assumenda magnam eos doloribus distinctio!
+                    </p>
+                    <ul>
+                      <li><b>Area</b> : 1670 m2</li>
+                      <li><b>Completed Date</b> : September 2018</li>
+                      <li><b>Architect</b> : Andrew Yus</li>
+                    </ul>
+                    <div class="detail">
+                      <div><span>225</span>WORKING DAY</div>
+                      <div><span>320</span>MEMBERS</div>
+                      <div><span>3M</span>BUDGET</div>
+                    </div>
+                    <a class="view-project"
+                      >view-project<i class="fa fa-long-arrow-right"></i
+                    ></a>
+                  </div>
                   <div class="project-photo">
-                    <img src="images/project-main-01-02.jpg" alt="" />
+                    <img src="images/project-main-02-01.jpg" alt="" />
+                    <img src="images/project-main-02-02.jpg" alt="" />
+                    <img src="images/project-main-02-03.jpg" alt="" />
+                    <img src="images/project-main-02-04.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="tab">
+                  <div class="project-info" data-text="03">
+                    <h3>Project : Outside Stairs Architecture</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                      Suscipit dolor modi ut eveniet exercitationem,
+                      voluptatibus aspernatur fugit culpa quisquam. Fuga
+                      laboriosam temporibus sint debitis veniam omnis quam ipsam
+                      vel magnam. Culpa voluptate quo temporibus officiis
+                      assumenda magnam eos doloribus distinctio!
+                    </p>
+                    <ul>
+                      <li><b>Area</b> : 1200 m2</li>
+                      <li><b>Completed Date</b> : May 2020</li>
+                      <li><b>Architect</b> : Christine Jung</li>
+                    </ul>
+                    <div class="detail">
+                      <div><span>132</span>WORKING DAY</div>
+                      <div><span>202</span>MEMBERS</div>
+                      <div><span>5M</span>BUDGET</div>
+                    </div>
+                    <a class="view-project"
+                      >view-project<i class="fa fa-long-arrow-right"></i
+                    ></a>
+                  </div>
+                  <div class="project-photo">
+                    <img src="images/project-main-03-01.jpg" alt="" />
+                    <img src="images/project-main-03-02.jpg" alt="" />
+                    <img src="images/project-main-03-03.jpg" alt="" />
+                    <img src="images/project-main-03-04.jpg" alt="" />
                   </div>
                 </div>
               </div>
